--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,8 +66,8 @@ jobs:
       - run:
           name: Install package
           command: |
-            apt-get update
-            apt-get install git -y
+            sudo apt-get update
+            sudo apt-get install git -y
 
       - run:
           name: Setup git
@@ -79,7 +79,7 @@ jobs:
       - run:
           name: Update VERSION
           command: |
-            pip install yolk3k
+            sudo pip install yolk3k
             VERSION=$(yolk -M awscli --fields=version)
 
             sed -i -e "s/ENV AWSCLI_VERSION .*$/ENV AWSCLI_VERSION ${VERSION}/g" Dockerfile
@@ -103,7 +103,7 @@ workflows:
     triggers:
       - schedule:
           # cron: "0 19 * * *" # JST 4:00
-          cron: "54 * * * *" # JST 4:00
+          cron: "56 * * * *" # JST 4:00
           filters:
             branches:
               only: master
