--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,8 +102,7 @@ workflows:
   daily_update:
     triggers:
       - schedule:
-          # cron: "0 19 * * *" # JST 4:00
-          cron: "56 * * * *" # JST 4:00
+          cron: "0 19 * * *" # JST 4:00
           filters:
             branches:
               only: master
