--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
           name: Run tests
           command: |
             docker run -it --rm awscli-all bash -c "aws --version"
+            docker run -it --rm awscli-all bash -c "ecs-cli --version"
 
   update_version:
     docker:
