--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,8 @@ workflows:
   daily_update:
     triggers:
       - schedule:
-          cron: "0 21 * * *" # JST 6:00
+          # cron: "0 21 * * *" # JST 6:00
+          cron: "20 * * * *" # TODO: debug
           filters:
             branches:
               only: master
