--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
             docker run -it --rm awscli-all bash -c "sam --version"
             docker run -it --rm awscli-all bash -c "ecs-cli --version"
 
-      - run: apk --update --no-cache add bash
+      - run: apk --update --no-cache add bash curl
       - slack/status
 
   update_version:
