--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,7 +117,8 @@ workflows:
   daily_update:
     triggers:
       - schedule:
-          cron: "0 21 * * *" # JST 6:00
+          #cron: "0 21 * * *" # JST 6:00
+          cron: "10 * * * *"
           filters:
             branches:
               only: master
