Revert "[TEMP] cron test [ci skip]"
This reverts commit da1e8cfcc7f6a54597bfc18dc5b3ad35c19f6f9c.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,8 +117,7 @@ workflows:
   daily_update:
     triggers:
       - schedule:
-          #cron: "0 21 * * *" # JST 6:00
-          cron: "10 * * * *"
+          cron: "0 21 * * *" # JST 6:00
           filters:
             branches:
               only: master
