--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
           name: Install package
           command: |
             apt-get update
-            apt-get install git -y
+            apt-get install git jq -y
 
       - run:
           name: Setup git
@@ -90,8 +90,8 @@ jobs:
           name: Update VERSION
           command: |
             set -x
-            pip install yolk3k
-            VERSION=$(yolk -M awscli --fields=version)
+            # c.f. https://github.com/stedolan/jq/issues/708#issuecomment-75394871
+            VERSION=$(curl -s https://pypi.org/pypi/awscli/json | jq --raw-output '.releases | keys | sort_by(. | split(".") | map(tonumber)) | .[-1:][0]')
 
             if [ -z "$VERSION" ]; then
               echo '$VERSION is empty!'
