--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,3 +128,11 @@ workflows:
               only: master
     jobs:
       - update_version
+
+  manual_update:
+    jobs:
+      - hold:
+          type: approval
+      - update_version:
+          requires:
+            - hold
