--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Setup git
         run: |
           git config push.default current
-          git config user.name "GitHub Actions"
-          git config user.email "github-actions@example.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
 
       - name: Update VERSION
         run: |
