--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -40,9 +40,9 @@ jobs:
           git add Dockerfile
 
           set +e
-          git commit -m "Bump version ${VERSION} from GitHub Actions" | true
-          git tag -a ${VERSION} -m "Release ${VERSION}" | true
-          git push origin --tags | true
+          git commit -m "Bump version ${VERSION} from GitHub Actions"
+          git tag -a ${VERSION} -m "Release ${VERSION}"
+          git push origin --tags
           set -e
           git push origin
 
