--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,15 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - ".circleci/**"
   pull_request:
     types:
       - opened
       - synchronize
       - reopened
+    paths-ignore:
+      - ".circleci/**"
 
 jobs:
   build:
