--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -9,15 +9,12 @@ jobs:
   update_version:
     runs-on: ubuntu-latest
 
-    container: python:3.7
-
     steps:
-      - name: Install package
-        run: |
-          apt-get update
-          apt-get install git jq -y
-
       - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.7"
 
       - name: Setup git
         run: |
