Migrate to lazy-actions/slatify

--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -45,7 +45,7 @@ jobs:
           git push origin
 
       - name: Slack Notification (not success)
-        uses: homoluctus/slatify@master
+        uses: lazy-actions/slatify@master
         if: "! success()"
         continue-on-error: true
         with:
@@ -70,7 +70,7 @@ jobs:
       - run: docker-compose --file docker-compose.test.yml run sut
 
       - name: Slack Notification (not success)
-        uses: homoluctus/slatify@master
+        uses: lazy-actions/slatify@master
         if: "! success()"
         continue-on-error: true
         with:
